--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "1.6.8",
     "less": "4.2.0",
     "the-new-css-reset": "1.11.2",
     "vue": "3.4.21"
