--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "1.6.8",
     "less": "4.2.0",
     "the-new-css-reset": "1.11.2",
-    "vue": "3.4.21"
+    "vue": "3.4.21",
+    "vue-router": "4.3.0"
   },
   "devDependencies": {
     "@unocss/preset-rem-to-px": "0.58.6",
