--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "1.6.8",
     "less": "4.2.0",
+    "pinia": "2.1.7",
     "the-new-css-reset": "1.11.2",
     "vue": "3.4.21",
     "vue-router": "4.3.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@unocss/preset-rem-to-px": "0.58.6",
     "@vitejs/plugin-vue": "5.0.4",
+    "pinia-plugin-persistedstate": "3.2.1",
     "typescript": "5.4.3",
     "unocss": "0.58.6",
     "vite": "5.2.6",
