--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arco-design/web-vue": "2.55.0",
     "axios": "1.6.8",
     "less": "4.2.0",
     "pinia": "2.1.7",
@@ -17,11 +18,14 @@
     "vue-router": "4.3.0"
   },
   "devDependencies": {
+    "@arco-plugins/vite-vue": "1.4.5",
     "@unocss/preset-rem-to-px": "0.58.6",
     "@vitejs/plugin-vue": "5.0.4",
     "pinia-plugin-persistedstate": "3.2.1",
     "typescript": "5.4.3",
     "unocss": "0.58.6",
+    "unplugin-auto-import": "0.17.5",
+    "unplugin-vue-components": "0.26.0",
     "vite": "5.2.6",
     "vue-tsc": "2.0.7"
   }
